# mpc_cbf_ws

./: .gitignore
src/MPC-D-CBF/: README.md
src/MPC-D-CBF/docs/: ALGORITHM_NOTES.md  FILE_GUIDE.md  WORKSPACE_GUIDE.md
src/MPC-D-CBF/global_path_publisher/: CMakeLists.txt  package.xml
src/MPC-D-CBF/global_path_publisher/launch/: pub_global_path.launch
src/MPC-D-CBF/global_path_publisher/src/: global_path_publisher.cpp
src/MPC-D-CBF/local_map/: CMakeLists.txt  package.xml
src/MPC-D-CBF/local_map/include/: KM.hpp  ellipse.hpp
src/MPC-D-CBF/local_map/launch/: for_simulation.launch
src/MPC-D-CBF/local_map/src/: local_map_pub.cpp
src/MPC-D-CBF/local_planner/: CMakeLists.txt  package.xml
src/MPC-D-CBF/local_planner/config/: my_planner_params.yaml
src/MPC-D-CBF/local_planner/launch/: local_planner.launch
src/MPC-D-CBF/local_planner/scripts/: adaptive_local_planner.py  controller.py  local_planner.py  my_local_planner.py
src/MPC-D-CBF/obs_param/: package.xml
src/MPC-D-CBF/obs_param/src/: obs_kf.cpp
src/MPC-D-CBF/scene/: CMakeLists.txt  package.xml
src/MPC-D-CBF/scene/launch/: env_visualization.launch  env_visualization_blind_wall_static.launch  env_visualization_side_static.launch  experiment_logger.launch  full_stack.launch  movetest_node.launch  movetest_side_static.launch  planner_only.launch  reset_blind_wall_robot.launch  sim_environment.launch  sim_environment_side_static.launch  visualization.launch
src/MPC-D-CBF/scene/rviz_config/: simulation.rviz
src/MPC-D-CBF/scene/scripts/: experiment_logger.py  gazebo_path_visualizer.py  reset_jackal_pose.py
src/MPC-D-CBF/scene/src/: movetest_side_static.cpp
src/MPC-D-CBF/scene/urdf/: goal_marker.urdf
src/MPC-D-CBF/scene/worlds/: blind_wall_static.world  side_static_dynamic.world
src/MPC-D-CBF/tools/: bootstrap_catkin_ws.sh
