<?xml version="1.0"?>
<package format="2">
  <name>global_path_publisher</name>
  <version>0.0.0</version>
  <description>The global_path_publisher package</description>

  <maintainer email="luzong@todo.todo">luzong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export />
</package>
