<?xml version="1.0"?>
<package format="2">
  <name>local_map</name>
  <version>0.0.1</version>
  <description>local map</description>

  <maintainer email="yanzh22@mails.tsinghua.edu.cn">yzh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

  <export />
</package>
