<?xml version="1.0"?>
<package format="2">
  <name>scene</name>
  <version>0.0.0</version>
  <description>The scene package</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export />
</package>
